eerste stappen voor java 11 compatibility
aanpassingen voor java 11, stap 2

zie ook: http://docs.geotools.org/latest/userguide/welcome/upgrade.html

update jaxws-maven-plugin to next release version

GeoTools 21-M0 bump

java 11+ profile voor commandline tool